--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 :root {
   --bg-color: #3b3a3a;
   --text-color: white;
-  --hover-bg-color: blue;
+  --hover-bg-color: purple;
   --selected-bg-color: white;
   --selected-text-color: green;
   --font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
