--- a/css/style.scss
+++ b/css/style.scss
@@ -7,11 +7,10 @@
 $no_algos: 6;
 $bg-color: rgb(59, 58, 58);
 $text-color: white;
-$hover-bg-color: blue;
+$hover-bg-color: purple;
 $font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 
-*
-{
+* {
     margin: 0px;
     padding: 0px;
     font-family: $font-family;
@@ -20,8 +19,7 @@ $font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
     text-transform: uppercase;
 }
 
-nav
-{
+nav {
     background-color: $bg-color;
     color: $text-color;
     display: grid;
@@ -29,90 +27,80 @@ nav
     column-gap: 10%;
     padding: 0% 5%;
 
-    .array-inputs
-    {
+    .array-inputs {
         display: flex;
         align-items: center;
         gap: 2rem; // Add gap between elements
 
-        #a_size, #a_speed
-        {
+        #a_size,
+        #a_speed {
             margin-right: 1rem; // Add margin for better spacing
         }
 
-        #a_generate
-        {
+        #a_generate {
             background-color: transparent;
             border: none;
             outline: none;
             color: $text-color;
             padding: 0.5rem 1rem;
-            &:hover
-            {
+
+            &:hover {
                 cursor: pointer;
                 background-color: $hover-bg-color;
             }
         }
     }
 
-    .header_right
-    {
+    .header_right {
         display: flex;
         flex-direction: column;
         align-items: center;
 
-        .nav-heading
-        {
+        .nav-heading {
             font-size: xxx-large;
             padding: 3% 0%;
         }
 
-        .algos
-        {
+        .algos {
             display: flex;
             gap: 1rem; // Add gap between buttons
 
-            button
-            {
+            button {
                 background-color: transparent;
                 border: none;
                 color: $text-color;
                 outline: none;
                 padding: 0.5rem 1rem;
                 font-size: x-large;
-                &:hover
-                {
+
+                &:hover {
                     background-color: $hover-bg-color;
                     cursor: pointer;
                 }
             }
 
-            .butt_locked
-            {
+            .butt_locked {
                 background-color: transparent;
                 cursor: pointer;
-                &:hover
-                {
+
+                &:hover {
                     background-color: transparent;
                     cursor: pointer;
                 }
             }
 
-            .butt_selected
-            {
+            .butt_selected {
                 background-color: $text-color;
                 color: green;
-                &:hover
-                {
+
+                &:hover {
                     background-color: $text-color;
                     cursor: pointer;
                 }
             }
 
-            .butt_unselected
-            {
-                &:hover
-                {
+            .butt_unselected {
+                &:hover {
                     background-color: $hover-bg-color;
                     cursor: pointer;
                 }
@@ -121,8 +109,7 @@ nav
     }
 }
 
-section
-{
+section {
     display: grid;
     grid-template-columns: 20% 60% 20%;
 
@@ -147,25 +134,22 @@ section
 
     }
 
-    #Info_Cont1
-    {
+    #Info_Cont1 {
         padding: 20% 10%;
 
         h3 {
             text-decoration: underline;
         }
-        
+
     }
 
-    #array_container
-    {
+    #array_container {
         display: flex;
         width: 100%;
         height: 70vh;
     }
 
-    #Info_Cont2
-    {
+    #Info_Cont2 {
         padding: 20% 10%;
 
         h3 {
@@ -175,8 +159,7 @@ section
     }
 }
 
-.hide
-{
+.hide {
     display: none;
 }
 
